--- a/WebApplicationExercise/packages.config
+++ b/WebApplicationExercise/packages.config
@@ -29,6 +29,8 @@
   <package id="Swashbuckle" version="5.6.0" targetFramework="net462" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net462" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net462" />
+  <package id="Unity" version="5.2.0" targetFramework="net462" />
+  <package id="Unity.Mvc5" version="1.3.0" targetFramework="net462" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net462" />
   <package id="WebGrease" version="1.6.0" targetFramework="net462" />
 </packages>
