--- a/WebApplicationExercise/Web.config
+++ b/WebApplicationExercise/Web.config
@@ -7,6 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -100,4 +101,25 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
+    autoReload="true"
+    throwExceptions="false"
+    internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
+      <targets>
+        <target
+          name="logfile"
+          xsi:type="File"
+          fileName="log.log"
+          layout="${longdate}|${level:uppercase=true}|${logger}|${threadid}|${message}|${exception:format=tostring}"/>
+        <target
+          name="logconsole"
+          xsi:type="Console" />
+      </targets>
+      <rules>
+        <logger name="*" minlevel="Info" writeTo="logconsole" />
+        <logger name="*" minlevel="Debug" writeTo="logfile" />
+      </rules>
+  </nlog>
 </configuration>
